# ThirdBrAIn-MCPSERVERS-IQ

./: README.md
AI-QL--chat-mcp/: .gitrepo
DeltaTask/: .gitignore  .gitrepo  prompt.txt  pyproject.toml  requirements.txt  server.py  task_service.py
Gmail-MCP-Server/: .gitrepo
agentico-dev--mcp-server/: .gitrepo  RELEASE_NOTES.md  package-lock.json
atlas-mcp-server/: .gitrepo
chat-mcp/: .gitrepo
claude-debugs-for-you/: .gitrepo
claudesidian/: .gitignore  .gitrepo  MCP-Docs.md  code_summary.py  pyproject.toml
claudesidian/src/claudesidian_mcp/: __init__.py  memory.py  reasoning.py  scraper.py  search.py  server.py  tools.py  vault.py
code-research-mcp-server/: .gitrepo
community-servers/: .gitrepo
crewai_mcp_adapter/: .gitrepo
dify-mcp-server/: .gitrepo
ggozad--oterm/: .gitrepo
hn-server/: .gitrepo  package-lock.json  package.json
markdownify-mcp/: .gitrepo
mcp-agent/: .gitrepo
mcp-architect/: .gitrepo
mcp-cli/: .gitrepo
mcp-client-cli/: .gitrepo
mcp-cline-personas/: .gitignore  .gitrepo  LICENSE  babel.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
mcp-codex-keeper/: .gitrepo
mcp-dev-server/: .gitignore  .gitrepo  package.json  setup.py
mcp-documentation-server/: .gitrepo
mcp-hitchcode/: .gitrepo
mcp-pdf-tools/: .gitrepo  pyproject.toml
mcp-proxy-server/: .gitrepo
mcp-rest-api/: .gitrepo
mcp-rtfm/: .gitrepo
mcp-server/: .gitrepo  README.md  mcp-server.md  package.json
mcp-server-llmling/: .gitrepo
mcp-server-server/: .gitignore  .gitrepo  bun.lockb  package.json
mcp-server-ticketmaster/: .gitrepo
mcp-servers/: .gitrepo
mcp-taskmanager/: .gitrepo
mcp-test-runner/: .gitrepo
mcp-tts-say/: .gitrepo
mcp-youtube/: .gitrepo
mcp-youtube-sheets/: .gitrepo
mcp_gradio_client/: .gitrepo
mcp_proxy_pydantic_agent/: .gitrepo
mcpm/: .gitrepo
mcpm-aider/: .gitrepo
meta-mcp-server/: .gitignore  .gitrepo  package-lock.json  package.json  tsconfig.json
orchestrator-server/: .gitrepo
oterm/: .gitrepo
playwright-plus-python-mcp/: .gitrepo
project-handoffs/: .gitrepo
python-run-mcp/: .gitignore  .gitrepo
servers/: .gitrepo
spotify-mcp/: .gitrepo
swiss/: .gitignore  .gitrepo  LICENSE  README.md  pyproject.toml  (+1 more)
(+93 files in other folders)
