[project]
name = "mcp-pdf-tools"
version = "0.1.0"
description = "MCP server for PDF manipulation"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "hanwegaltimer@outlook.com" }
]
dependencies = [
    "mcp",
    "PyPDF2"
]

[project.urls]
Homepage = "https://github.com/hanweg/mcp-pdf-tools"
Repository = "https://github.com/hanweg/mcp-pdf-tools.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pdf-tools = "pdf_tools:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_tools"]